@@ -11,58 +11,36 @@ plugins {
 	id "local.javadoc"
 	id "local.code-quality"
 
-    alias(libs.plugins.pluginPublish)
+	id 'com.gradle.plugin-publish' version '2.0.0'
 	// for local publishing
 	id 'maven-publish'
 }
 
 description = "Gradle plugin for integrating Hibernate aspects into your build"
 
-sourceSets {
-	functionalTest {
-	}
-}
-
-configurations {
-	functionalTestImplementation.extendsFrom testImplementation
-	functionalTestRuntimeOnly.extendsFrom testRuntimeOnly
-}
-
 dependencies {
-	// align artifacts natively when consuming through Gradle
-	api platform(project(":hibernate-platform"))
-
 	implementation project(':hibernate-core')
-	implementation project(':hibernate-reveng')
 	implementation libs.byteBuddy
-	implementation libs.jakarta.jaxbApi
+	implementation jakartaLibs.jaxbApi
 
 	implementation gradleApi()
 	implementation localGroovy()
 
 	// for Gradle
-	implementation libs.jakarta.inject
+	implementation jakartaLibs.inject
 	implementation localGroovy()
 
 	testImplementation gradleTestKit()
-	testImplementation libs.test.assertjCore
-	testImplementation libs.test.junitJupiterApi
+	testImplementation testLibs.assertjCore
+	testImplementation testLibs.junitJupiterApi
 
-	testRuntimeOnly libs.test.junitJupiterEngine
-	testRuntimeOnly libs.test.junitJupiterLauncher
-
-	functionalTestRuntimeOnly libs.jdbc.h2
-}
-
-tasks.named( "forbiddenApisFunctionalTest" ) {
-	enabled = false
+	testRuntimeOnly testLibs.junitJupiterEngine
+	testRuntimeOnly testLibs.junitJupiterLauncher
 }
 
 gradlePlugin {
 	website = 'https://github.com/hibernate/hibernate-orm/tree/main/tooling/hibernate-gradle-plugin'
 	vcsUrl = 'https://github.com/hibernate/hibernate-orm/tree/main/tooling/hibernate-gradle-plugin'
-
-	testSourceSets sourceSets.test, sourceSets.functionalTest
 
 	plugins {
 		ormPlugin {
@@ -70,7 +48,7 @@ gradlePlugin {
 			implementationClass = "org.hibernate.orm.tooling.gradle.HibernateOrmPlugin"
 			displayName = 'Gradle plugin for Hibernate ORM'
 			description = 'Applies Hibernate aspects into the build'
-			tags = ['hibernate','orm','bytecode','enhancement','bytebuddy','reverse engineering','reveng','generation']
+			tags = ['hibernate','orm','bytecode','enhancement','bytebuddy']
 		}
 	}
 }
@@ -86,45 +64,34 @@ test {
 		exclude project.property( 'excludeTests' ) as String
 	}
     systemProperty("orm.gradle.min", project.property("orm.gradle.min"))
-    systemProperty('gradle.libs.versions.toml.path', rootProject.file('gradle/libs.versions.toml').absolutePath)
 	jvmArgs("--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
 			"--add-opens", "java.base/java.util=ALL-UNNAMED",
 			"--add-opens", "java.base/java.util.concurrent.atomic=ALL-UNNAMED")
-}
-
-def functionalTestTask = tasks.register("functionalTest", Test) {
-	description = "Runs the functional tests."
-	group = "verification"
-	testClassesDirs = sourceSets.functionalTest.output.classesDirs
-	classpath = sourceSets.functionalTest.runtimeClasspath
-	useJUnitPlatform()
-	systemProperty("gradle.test.version", project.property("orm.gradle.min"))
-	systemProperty("h2.version", libs.versions.h2.get())
-	jvmArgs("--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
-			"--add-opens", "java.base/java.util=ALL-UNNAMED",
-			"--add-opens", "java.base/java.util.concurrent.atomic=ALL-UNNAMED")
-}
-
-tasks.named("check") {
-	dependsOn functionalTestTask
 }
 
 if ( jdkVersions.test.launcher.asInt() > 21 ) {
     project.logger.lifecycle( "Skipping {} tests for JDK version {}", project.name, jdkVersions.test.launcher.asInt() )
     tasks.getByName( "test" ).enabled = false
-    tasks.getByName( "functionalTest" ).enabled = false
 }
 
 def releasePrepareTask = tasks.register("releasePrepare") {
-	group ="release-prepare"
-	description = "See :release:releasePrepare for details.  Here we hook in the `check` task."
+	group "release-prepare"
+	description "See :release:releasePrepare for details.  Here we hook in the `check` task."
 
 	dependsOn tasks.check
 }
 
+// used from the h2 CI job
+tasks.register("preVerifyRelease") {
+	group "release-prepare"
+	description "Delegates to `releasePrepare` task"
+
+	dependsOn releasePrepareTask
+}
+
 tasks.register("releaseGradlePluginPerform") {
-	group = "release-perform"
-	description = "An explicit task for publishing Gradle Plugins to the Plugin Portal"
+	group "release-perform"
+	description "An explicit task for publishing Gradle Plugins to the Plugin Portal"
 
 	dependsOn tasks.publishPlugins
 }
@@ -135,7 +102,7 @@ publishing {
 	repositories {
 		maven {
 			name = 'localPluginRepository'
-            url = layout.buildDirectory.dir("local-plugin-repository").get().asFile.toURI()
+			url = "${buildDir}/local-plugin-repository"
 		}
 	}
 }
@@ -165,35 +132,29 @@ else {
 		tasks.named( "compileTestJava", JavaCompile ).configure {
 			options.release = Math.min( jdkVersions.test.compiler.asInt(), jdkVersions.min.asInt() )
 		}
-		tasks.named( "compileFunctionalTestJava", JavaCompile ).configure {
-			options.release = Math.min( jdkVersions.test.compiler.asInt(), jdkVersions.min.asInt() )
-		}
 		// Must configure the test launcher to a version <= orm.jdk.max, because the tests invoke gradle,
 		// which inherently can only run with a JDK up to orm.jdk.max.
 		// Since we only support running Gradle with JDKs in the range of orm.jdk.min up to orm.jdk.max,
 		// we use a test java launcher for the latest available/configured JDK version
-		def testLauncher = javaToolchains.launcherFor {
-			languageVersion = jdkVersions.min
-		}
-		for ( int version = jdkVersions.min.asInt() + 1; version <= jdkVersions.max.asInt(); version++ ) {
-			testLauncher = new DefaultProvider(() -> {
-				try {
-					return javaToolchains.launcherFor {
-						languageVersion = JavaLanguageVersion.of( version )
-					}.get()
-				}
-				catch (GradleException ex) {
-					// JavaToolchainQueryService unfortunately throws an exception if a version is not found,
-					// so we have to catch the exception and return null here to allow a fallback
-					return null
-				}
-			}).orElse( testLauncher )
-		}
 		tasks.named( "test", Test ).configure {
-			javaLauncher = testLauncher
-		}
-		tasks.named( "functionalTest", Test ).configure {
-			javaLauncher = testLauncher
+			def launcher = javaToolchains.launcherFor {
+				languageVersion = jdkVersions.min
+			}
+			for ( int version = jdkVersions.min.asInt() + 1; version <= jdkVersions.max.asInt(); version++ ) {
+				launcher = new DefaultProvider(() -> {
+					try {
+						return javaToolchains.launcherFor {
+							languageVersion = JavaLanguageVersion.of( version )
+						}.get()
+					}
+					catch (GradleException ex) {
+						// JavaToolchainQueryService unfortunately throws an exception if a version is not found,
+						// so we have to catch the exception and return null here to allow a fallback
+						return null
+					}
+				}).orElse( launcher )
+			}
+			javaLauncher = launcher
 		}
 	}
 }
